// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot tests with no other session 1`] = `
<body>
  <div>
    <div
      class="MuiContainer-root makeStyles-root-1 MuiContainer-maxWidthLg"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root makeStyles-calendar-2 MuiGrid-item MuiGrid-grid-xs-4"
            >
              letztes mal
            </div>
            <div
              class="MuiGrid-root makeStyles-current-3 MuiGrid-item MuiGrid-grid-xs-4"
            >
              aktuell
              <div
                class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-142 MuiPaper-rounded"
              >
                <div
                  class="MuiGrid-root makeStyles-calendar-143 MuiGrid-container MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root makeStyles-center-144 MuiGrid-item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-h4"
                    >
                      21
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Juli
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root makeStyles-calendar-2 MuiGrid-item MuiGrid-grid-xs-4"
            >
              nächstes mal
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root makeStyles-form-4 MuiGrid-item MuiGrid-grid-xs-12"
            >
              <form>
                <div
                  class="MuiGrid-root makeStyles-center-175 MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="SessionDateInput"
                      >
                        Datum
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-232 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-233"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="SessionDateInput"
                          type="date"
                          value="2069-07-21"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="SessionPayedAmountInput"
                      >
                        Bezahlt
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-232 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-233"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="SessionPayedAmountInput"
                          type="number"
                          value="15"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                        data-shrink="false"
                        for="SessionDescriptionInput"
                      >
                        Beschreibung
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-232 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-233"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <textarea
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          id="SessionDescriptionInput"
                          rows="1"
                        />
                        <textarea
                          aria-hidden="true"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          readonly=""
                          style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; width: 100%;"
                          tabindex="-1"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Hinzufügen
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-263 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            Kontostand: 
            <span>
              0
               €
            </span>
          </h5>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-266 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            Historie
          </h5>
          <table
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                  scope="col"
                >
                  Datum
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                  scope="col"
                >
                  Preis
                </th>
                <th
                  class="MuiTableCell-root makeStyles-payedColumn-270 MuiTableCell-head"
                  scope="col"
                >
                  Gezahlt (Differenz)
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`snapshot tests with session in future 1`] = `
<body>
  <div>
    <div
      class="MuiContainer-root makeStyles-root-599 MuiContainer-maxWidthLg"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root makeStyles-calendar-600 MuiGrid-item MuiGrid-grid-xs-4"
            >
              letztes mal
            </div>
            <div
              class="MuiGrid-root makeStyles-current-601 MuiGrid-item MuiGrid-grid-xs-4"
            >
              aktuell
              <div
                class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-740 MuiPaper-rounded"
              >
                <div
                  class="MuiGrid-root makeStyles-calendar-741 MuiGrid-container MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root makeStyles-center-742 MuiGrid-item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-h4"
                    >
                      21
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Juli
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root makeStyles-calendar-600 MuiGrid-item MuiGrid-grid-xs-4"
            >
              nächstes mal
              <div
                class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-740 MuiPaper-rounded"
              >
                <div
                  class="MuiGrid-root makeStyles-calendar-741 MuiGrid-container MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root makeStyles-center-742 MuiGrid-item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-h4"
                    >
                      23
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Juli
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root makeStyles-form-602 MuiGrid-item MuiGrid-grid-xs-12"
            >
              <form>
                <div
                  class="MuiGrid-root makeStyles-center-773 MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="SessionDateInput"
                      >
                        Datum
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-830 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-831"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="SessionDateInput"
                          type="date"
                          value="2069-07-21"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="SessionPayedAmountInput"
                      >
                        Bezahlt
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-830 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-831"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="SessionPayedAmountInput"
                          type="number"
                          value="15"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                        data-shrink="false"
                        for="SessionDescriptionInput"
                      >
                        Beschreibung
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-830 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-831"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <textarea
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          id="SessionDescriptionInput"
                          rows="1"
                        />
                        <textarea
                          aria-hidden="true"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          readonly=""
                          style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; width: 100%;"
                          tabindex="-1"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Hinzufügen
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-861 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            Kontostand: 
            <span>
              0
               €
            </span>
          </h5>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-864 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            Historie
          </h5>
          <table
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                  scope="col"
                >
                  Datum
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                  scope="col"
                >
                  Preis
                </th>
                <th
                  class="MuiTableCell-root makeStyles-payedColumn-868 MuiTableCell-head"
                  scope="col"
                >
                  Gezahlt (Differenz)
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  23.7.69
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  15
                </td>
                <td
                  class="MuiTableCell-root makeStyles-payedColumn-868 MuiTableCell-body"
                >
                  15
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`snapshot tests with session in past 1`] = `
<body>
  <div>
    <div
      class="MuiContainer-root makeStyles-root-300 MuiContainer-maxWidthLg"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root makeStyles-calendar-301 MuiGrid-item MuiGrid-grid-xs-4"
            >
              letztes mal
              <div
                class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-441 MuiPaper-rounded"
              >
                <div
                  class="MuiGrid-root makeStyles-calendar-442 MuiGrid-container MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root makeStyles-center-443 MuiGrid-item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-h4"
                    >
                      1
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Januar
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root makeStyles-current-302 MuiGrid-item MuiGrid-grid-xs-4"
            >
              aktuell
              <div
                class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-441 MuiPaper-rounded"
              >
                <div
                  class="MuiGrid-root makeStyles-calendar-442 MuiGrid-container MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root makeStyles-center-443 MuiGrid-item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-h4"
                    >
                      21
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Juli
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root makeStyles-calendar-301 MuiGrid-item MuiGrid-grid-xs-4"
            >
              nächstes mal
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root makeStyles-form-303 MuiGrid-item MuiGrid-grid-xs-12"
            >
              <form>
                <div
                  class="MuiGrid-root makeStyles-center-474 MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="SessionDateInput"
                      >
                        Datum
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-531 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-532"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="SessionDateInput"
                          type="date"
                          value="2069-07-21"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="SessionPayedAmountInput"
                      >
                        Bezahlt
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-531 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-532"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="SessionPayedAmountInput"
                          type="number"
                          value="15"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                        data-shrink="false"
                        for="SessionDescriptionInput"
                      >
                        Beschreibung
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-531 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-532"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <textarea
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          id="SessionDescriptionInput"
                          rows="1"
                        />
                        <textarea
                          aria-hidden="true"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          readonly=""
                          style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; width: 100%;"
                          tabindex="-1"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Hinzufügen
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-562 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            Kontostand: 
            <span>
              0
               €
            </span>
          </h5>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-565 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            Historie
          </h5>
          <table
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                  scope="col"
                >
                  Datum
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                  scope="col"
                >
                  Preis
                </th>
                <th
                  class="MuiTableCell-root makeStyles-payedColumn-569 MuiTableCell-head"
                  scope="col"
                >
                  Gezahlt (Differenz)
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  1.1.70
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  15
                </td>
                <td
                  class="MuiTableCell-root makeStyles-payedColumn-569 MuiTableCell-body"
                >
                  15
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`snapshot tests with sessions in past and future 1`] = `
<body>
  <div>
    <div
      class="MuiContainer-root makeStyles-root-898 MuiContainer-maxWidthLg"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root makeStyles-calendar-899 MuiGrid-item MuiGrid-grid-xs-4"
            >
              letztes mal
              <div
                class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-1039 MuiPaper-rounded"
              >
                <div
                  class="MuiGrid-root makeStyles-calendar-1040 MuiGrid-container MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root makeStyles-center-1041 MuiGrid-item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-h4"
                    >
                      19
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Juli
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root makeStyles-current-900 MuiGrid-item MuiGrid-grid-xs-4"
            >
              aktuell
              <div
                class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-1039 MuiPaper-rounded"
              >
                <div
                  class="MuiGrid-root makeStyles-calendar-1040 MuiGrid-container MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root makeStyles-center-1041 MuiGrid-item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-h4"
                    >
                      21
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Juli
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root makeStyles-calendar-899 MuiGrid-item MuiGrid-grid-xs-4"
            >
              nächstes mal
              <div
                class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-1039 MuiPaper-rounded"
              >
                <div
                  class="MuiGrid-root makeStyles-calendar-1040 MuiGrid-container MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root makeStyles-center-1041 MuiGrid-item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-h4"
                    >
                      23
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Juli
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root makeStyles-form-901 MuiGrid-item MuiGrid-grid-xs-12"
            >
              <form>
                <div
                  class="MuiGrid-root makeStyles-center-1072 MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="SessionDateInput"
                      >
                        Datum
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-1129 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-1130"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="SessionDateInput"
                          type="date"
                          value="2069-07-21"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="SessionPayedAmountInput"
                      >
                        Bezahlt
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-1129 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-1130"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="SessionPayedAmountInput"
                          type="number"
                          value="15"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                        data-shrink="false"
                        for="SessionDescriptionInput"
                      >
                        Beschreibung
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-1129 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-1130"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <textarea
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          id="SessionDescriptionInput"
                          rows="1"
                        />
                        <textarea
                          aria-hidden="true"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          readonly=""
                          style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; width: 100%;"
                          tabindex="-1"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Hinzufügen
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-1160 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            Kontostand: 
            <span>
              0
               €
            </span>
          </h5>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-1163 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            Historie
          </h5>
          <table
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                  scope="col"
                >
                  Datum
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                  scope="col"
                >
                  Preis
                </th>
                <th
                  class="MuiTableCell-root makeStyles-payedColumn-1167 MuiTableCell-head"
                  scope="col"
                >
                  Gezahlt (Differenz)
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
            >
              <tr
                class="MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  23.7.69
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  15
                </td>
                <td
                  class="MuiTableCell-root makeStyles-payedColumn-1167 MuiTableCell-body"
                >
                  15
                </td>
              </tr>
              <tr
                class="MuiTableRow-root"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  19.7.69
                </td>
                <td
                  class="MuiTableCell-root MuiTableCell-body"
                >
                  15
                </td>
                <td
                  class="MuiTableCell-root makeStyles-payedColumn-1167 MuiTableCell-body"
                >
                  15
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`snapshot tests with trainee missing in store 1`] = `
<body>
  <div>
    <div
      class="MuiContainer-root makeStyles-root-1197 MuiContainer-maxWidthLg"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
          >
            <div
              class="MuiGrid-root makeStyles-calendar-1198 MuiGrid-item MuiGrid-grid-xs-4"
            >
              letztes mal
            </div>
            <div
              class="MuiGrid-root makeStyles-current-1199 MuiGrid-item MuiGrid-grid-xs-4"
            >
              aktuell
              <div
                class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-1338 MuiPaper-rounded"
              >
                <div
                  class="MuiGrid-root makeStyles-calendar-1339 MuiGrid-container MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root makeStyles-center-1340 MuiGrid-item"
                  >
                    <span
                      class="MuiTypography-root MuiTypography-h4"
                    >
                      21
                    </span>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    Juli
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root makeStyles-calendar-1198 MuiGrid-item MuiGrid-grid-xs-4"
            >
              nächstes mal
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-container"
          >
            <div
              class="MuiGrid-root makeStyles-form-1200 MuiGrid-item MuiGrid-grid-xs-12"
            >
              <form>
                <div
                  class="MuiGrid-root makeStyles-center-1371 MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-filled"
                        data-shrink="true"
                        for="SessionDateInput"
                      >
                        Datum
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-1428 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-1429"
                            style="width: 0px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="SessionDateInput"
                          type="date"
                          value="2069-07-21"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                        data-shrink="false"
                        for="SessionPayedAmountInput"
                      >
                        Bezahlt
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-1428 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-1429"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input"
                          id="SessionPayedAmountInput"
                          type="number"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <div
                      class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
                        data-shrink="false"
                        for="SessionDescriptionInput"
                      >
                        Beschreibung
                      </label>
                      <div
                        class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
                      >
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-1428 MuiOutlinedInput-notchedOutline"
                          style="padding-left: 8px;"
                        >
                          <legend
                            class="PrivateNotchedOutline-legend-1429"
                            style="width: 0.01px;"
                          >
                            <span>
                              ​
                            </span>
                          </legend>
                        </fieldset>
                        <textarea
                          aria-invalid="false"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          id="SessionDescriptionInput"
                          rows="1"
                        />
                        <textarea
                          aria-hidden="true"
                          class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
                          readonly=""
                          style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; width: 100%;"
                          tabindex="-1"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-fullWidth"
                      tabindex="0"
                      type="submit"
                    >
                      <span
                        class="MuiButton-label"
                      >
                        Hinzufügen
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          role="presentation"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </button>
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-1459 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            Kontostand: 
            <span>
              0
               €
            </span>
          </h5>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation1 makeStyles-root-1462 MuiPaper-rounded"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg"
        >
          <h5
            class="MuiTypography-root MuiTypography-h5"
          >
            Historie
          </h5>
          <table
            class="MuiTable-root"
          >
            <thead
              class="MuiTableHead-root"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-head"
              >
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                  scope="col"
                >
                  Datum
                </th>
                <th
                  class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeSmall"
                  scope="col"
                >
                  Preis
                </th>
                <th
                  class="MuiTableCell-root makeStyles-payedColumn-1466 MuiTableCell-head"
                  scope="col"
                >
                  Gezahlt (Differenz)
                </th>
              </tr>
            </thead>
            <tbody
              class="MuiTableBody-root"
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</body>
`;
